# ChangeLog for media-gfx/imagemagick
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.12 2002/06/29 14:38:04 seemant Exp $

*imagemagick-5.4.6 (29 Jun 2002)

  29 Jun 2002; Seemant Kulleen <seemant@gentoo.org> imagemagick-5.4.6.ebuild
  files/digest-imagemagick-5.4.6 :

  Version bump.

*imagemagick-5.4.5 (6 May 2002)

  29 Apr 2002; Thilo Bangert <bangert@gentoo.org> imagemagick-5.4.4-r2.ebuild :
  
  put dgs depandy under X use, so that imagemagick now no longer depends on X

  17 Apr 2002; Martin Schlemmer <azarah@gentoo.org> imagemagick-5.4.4-r2.ebuild :

  Libtoolized to fix build problems with dual gcc installations.

*imagemagick-5.4.4-r2 (13 Apr 2002)

  13 Apr 2002; Seemant Kulleen <seemant@gentoo.org> imagemagick-5.4.4-r2.ebuild :
  files/digest-imagemagick-5.4.4-r2 :

  I rearranged the MY_P variables, and oops'd on it, because it wasn't setting
  the WORKDIR correctly.  Also there were fetch problems.

*imagemagick-5.4.4-r2 (12 Apr 2002)

  12 Apr 2002; Seemant Kulleen <seemant@gentoo.org> imagemagick-5.4.4-r2.ebuild:

  Compile against newest libpng

*imagemagick-5.4.4-r1 (11 Apr 2002)

  11 Apr 2002; Seemant Kulleen <seemant@gentoo.org> imagemagick-5.4.4-r1.ebuild:

  Changed the tarball to be fetched to tar.gz because the server no longer
  carries a tar.bz2 for some reason

*imagemagick-5.4.4 (6 Apr 2002)

  6 Apr 2002; Jon Nelson <jnelson@gentoo.org> imagemagick-5.4.4.ebuild :

  Updated to use the latest version of the tarball (5.4.4-4).
  Removed dependencies on virtual/glibc (because its implicit),
  and virtual/lpr (because its not needed)

*imagemagick-5.4.4.4 (6 Apr 2002)

  6 Apr 2002; Jon Nelson <jnelson@gentoo.org> imagemagick-5.4.4.4.ebuild :

  Fixed typo in ebuild

*imagemagick-5.4.3-r1 (3 March 2002)

  3 March 2002; M.Schlemmer <azarah@gentoo.org> imagemagick-5.4.3-r1.ebuild :
