@@ -1,0 +1,1 @@
+MD5 2059a2dad90a797cd6bb26734b37bb45 ImageMagick-5.4.7-1.tar.bz2 2897178
