@@ -1,15 +1,19 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# Maintainer: Achim Gottinger <achim@gentoo.org>
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/imagemagick/Attic/imagemagick-5.4.5.ebuild,v 1.1 2002/05/06 17:27:21 azarah Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/imagemagick/Attic/imagemagick-5.4.7.ebuild,v 1.1 2002/07/09 04:27:58 seemant Exp $
+
+inherit libtool
+inherit perl-module
 
 MY_PN=ImageMagick
 MY_P=${MY_PN}-${PV}-1
 S=${WORKDIR}/${MY_PN}-${PV}
 DESCRIPTION="A collection of tools and libraries for many image formats"
-SRC_URI="http://imagemagick.sourceforge.net/http/${MY_P}.tar.gz"
+SRC_URI="http://imagemagick.sourceforge.net/http/${MY_P}.tar.bz2"
 HOMEPAGE="http://www.imagemagick.org/"
 SLOT="0"
+LICENSE="as-is"
+KEYWORDS="x86"
 
 DEPEND="X? ( virtual/x11
 	>=app-text/dgs-0.5.9.1 )
@@ -26,7 +30,7 @@ DEPEND="X? ( virtual/x11
 
 
 src_compile() {
-	libtoolize --copy --force
+	elibtoolize
 
 	local myconf=""
 	use perl || myconf="--without-perl"
@@ -38,8 +42,7 @@ src_compile() {
 	cp configure configure.orig
 	sed -e 's:netscape:mozilla:g' configure.orig > configure
 
-	./configure --prefix=/usr \
-		--mandir=/usr/share/man \
+	econf \
 		--enable-shared \
 		--enable-static \
 		--enable-lzw \
@@ -50,29 +53,35 @@ src_compile() {
 		--without-jbig \
 		--without-wmf \
 		--with-threads \
-		--build=${CHOST} \
 		${myconf} || die "bad configure"
 
 	emake || die "compile problem"
 }
 
 src_install() {
+	
+	myinst="prefix=${D}/usr PREFIX=${D}/usr"
+	myinst="${myinst} MagickSharePath=${D}/usr/share/ImageMagick/"
+	myinst="${myinst} pkgdocdir=${D}/usr/share/doc/${PF}/html"
+	myinst="${myinst} mandir=${D}/usr/share/man"
+	myinst="${myinst} datadir=${D}/usr/share"
 
-	make prefix=${D}/usr \
-		PREFIX=${D}/usr \
-		INSTALLPRIVLIB=${D}/usr/lib/perl5 \
-		INSTALLSCRIPT=${D}/usr/bin \
-		INSTALLSITELIB=${D}/usr/lib/perl5/site_perl \
-		INSTALLBIN=${D}/usr/bin \
-		INSTALLMAN1DIR=${D}/usr/share/man/man1  \
-		INSTALLMAN3DIR=${D}/usr/share/man/man3 \
-		mandir=${D}/usr/share/man \
-		MagickSharePath=${D}/usr/share/ImageMagick/ \
-		pkgdocdir=${D}/usr/share/doc/${PF}/html \
-		install || die "install problem"
+	mydoc="*.txt"
+#	make prefix=${D}/usr \
+#		PREFIX=${D}/usr \
+#		INSTALLPRIVLIB=${D}/usr/lib/perl5 \
+#		INSTALLSCRIPT=${D}/usr/bin \
+#		INSTALLSITELIB=${D}/usr/lib/perl5/site_perl \
+#		INSTALLBIN=${D}/usr/bin \
+#		INSTALLMAN1DIR=${D}/usr/share/man/man1  \
+#		INSTALLMAN3DIR=${D}/usr/share/man/man3 \
+#		mandir=${D}/usr/share/man \
+#		MagickSharePath=${D}/usr/share/ImageMagick/ \
+#		pkgdocdir=${D}/usr/share/doc/${PF}/html \
+#		install || die "install problem"
 
+	base_src_install
+	
 	rm -f ${D}/usr/share/ImageMagick/*.txt
 
-	dodoc Copyright.txt PLATFORMS.txt QuickStart.txt README.txt TODO.txt
 }
-
