@@ -1,6 +1,13 @@
 # ChangeLog for media-gfx/imagemagick
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.12 2002/06/29 14:38:04 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.13 2002/07/09 04:27:58 seemant Exp $
+
+*imagemagick-5.4.7 (08 Jul 2002)
+
+  08 Jul 2002; Seemant Kulleen <seemant@gentoo.org> imagemagick-5.4.7.ebuild
+  files/digest-imagemagick-5.4.7 :
+
+  Version bump.
 
 *imagemagick-5.4.6 (29 Jun 2002)
 
